Added warning message to website for incompatibilities with Android 11 and higher.

--- a/index-de.html
+++ b/index-de.html
@@ -337,6 +337,7 @@
             <div class="col-lg-9">
               <div class="text-container">
                 <h3>Android</h3>
+                <p><b>Warnung: Derzeit wird Valkyrie nur von Android 10 oder niedriger unterstützt. Siehe <a href="https://github.com/NPBruce/valkyrie/wiki/Troubleshooting#blackscreen-on-startup-android">Problembehandlung</a> für Details.</b></p>
                 <p>Wenn Sie bereits eine Version von Valkyrie installiert haben, deinstallieren Sie diese bitte zuerst.</p>
                 <p>Installieren Sie die offizielle App über den Google Play Store:</p>
                 <ul>
