--- a/index-es.html
+++ b/index-es.html
@@ -340,6 +340,7 @@
             <div class="col-lg-9">
               <div class="text-container">
                 <h3>Android</h3>
+                <p>Atención: Actualmente Valkyrie sólo es compatible con Android 10 o inferior. Consulta <a href="https://github.com/NPBruce/valkyrie/wiki/Troubleshooting#blackscreen-on-startup-android">solución de problemas</a> para más detalles.</b></p>
                 <p>Si ya hay una versión de Valkyrie instalada, por favor desinstálala primero.</p>
                 <p>Instala la aplicación oficial usando Google Play Store:</p>
                 <ul>
