--- a/index-fr.html
+++ b/index-fr.html
@@ -340,6 +340,7 @@
             <div class="col-lg-9">
               <div class="text-container">
                 <h3>Android</h3>
+                <p><b>Avertissement : Actuellement, Valkyrie n'est supporté que par Android 10 ou inférieur. Voir <a href="https://github.com/NPBruce/valkyrie/wiki/Troubleshooting#blackscreen-on-startup-android">dépannage</a> pour plus de détails.</b></p>.
                 <p>If you already have a version of Valkyrie installed, please uninstall it first.</p>
                 <p>Install the official app using the Google Play Store:</p>
                 <ul>
