--- a/index-pl.html
+++ b/index-pl.html
@@ -340,6 +340,7 @@
             <div class="col-lg-9">
               <div class="text-container">
                 <h3>Android</h3>
+                <p><b>Ostrzeżenie: Obecnie Valkyrie jest obsługiwany tylko przez Android 10 lub niższe. Zobacz <a href="https://github.com/NPBruce/valkyrie/wiki/Troubleshooting#blackscreen-on-startup-android">troubleshooting</a> po szczegóły.</b></p>
                 <p>Jeśli posiadasz już zainstalowaną wcześniejsza wersję Valkyrie, najpierw ją odinstaluj.</p>
                 <p>Zainstaluj oficjalną aplikację ze sklepu Google Play:</p>
                 <ul>
