--- a/index-pt.html
+++ b/index-pt.html
@@ -341,6 +341,7 @@
             <div class="col-lg-9">
               <div class="text-container">
                 <h3>Android</h3>
+                <p><b>Aviso: Actualmente a Valkyrie só é suportada pelo Android 10 ou inferior. Ver <a href="https://github.com/NPBruce/valkyrie/wiki/Troubleshooting#blackscreen-on-startup-android">troubleshooting</a> para detalhes.</b><</p>
                 <p>Se você já tem uma versão do Valkyrie instalada, por favor desinstale primeiro.</p>
                 <p>Instale o App Oficial usando a Google Play Store:</p>
                 <ul>
