--- a/index-it.html
+++ b/index-it.html
@@ -340,6 +340,7 @@
             <div class="col-lg-9">
               <div class="text-container">
                 <h3>Android</h3>
+                <p><b>Attenzione: Attualmente Valkyrie è supportato solo da Android 10 o inferiore. Vedi <a href="https://github.com/NPBruce/valkyrie/wiki/Troubleshooting#blackscreen-on-startup-android">troubleshooting</a> per i dettagli.</b></p>
                 <p>If you already have a version of Valkyrie installed, please uninstall it first.</p>
                 <p>Install the official app using the Google Play Store:</p>
                 <ul>
