--- a/index.html
+++ b/index.html
@@ -340,6 +340,7 @@
             <div class="col-lg-9">
               <div class="text-container">
                 <h3>Android</h3>
+                <p><b>Warning: Currently Valkyrie is only supported by Android 10 or lower. See <a href="https://github.com/NPBruce/valkyrie/wiki/Troubleshooting#blackscreen-on-startup-android">troubleshooting</a> for details.</b></p>
                 <p>If you already have a version of Valkyrie installed, please uninstall it first.</p>
                 <p>Install the official app using the Google Play Store:</p>
                 <ul>
