Each language in index.html language list is in its mother tongue

--- a/index-fr.html
+++ b/index-fr.html
@@ -96,17 +96,17 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="index.html"><span class="item-text">English</span></a>
                 <div class="dropdown-items-divide-hr"></div>
-                <a class="dropdown-item" href="index-es.html"><span class="item-text">Spanish</span></a>
+                <a class="dropdown-item" href="index-es.html"><span class="item-text">Esp&#241;ol</span></a>
                 <div class="dropdown-items-divide-hr"></div>
-                <a class="dropdown-item" href="index-it.html"><span class="item-text">Italian</span></a>
+                <a class="dropdown-item" href="index-it.html"><span class="item-text">Italiano</span></a>
                 <div class="dropdown-items-divide-hr"></div>
-                <a class="dropdown-item" href="index-fr.html"><span class="item-text">French</span></a>
+                <a class="dropdown-item" href="index-fr.html"><span class="item-text">Fran&#231;ais</span></a>
                 <div class="dropdown-items-divide-hr"></div>
-                <a class="dropdown-item" href="index-pt.html"><span class="item-text">Portuguese</span></a>
+                <a class="dropdown-item" href="index-pt.html"><span class="item-text">Portugu&#234;s</span></a>
                 <div class="dropdown-items-divide-hr"></div>
-                <a class="dropdown-item" href="index-pl.html"><span class="item-text">Polish</span></a>
+                <a class="dropdown-item" href="index-pl.html"><span class="item-text">Polski</span></a>
                 <div class="dropdown-items-divide-hr"></div>
-                <a class="dropdown-item" href="index-de.html"><span class="item-text">German</span></a>
+                <a class="dropdown-item" href="index-de.html"><span class="item-text">Deutsch</span></a>
             </div>
           </li>
         </ul>
