--- a/index-pl.html
+++ b/index-pl.html
@@ -94,19 +94,19 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle page-scroll" href="#details" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">JĘZYK</a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="index.html"><span class="item-text">Angielski</span></a>
+                <a class="dropdown-item" href="index.html"><span class="item-text">English</span></a>
                 <div class="dropdown-items-divide-hr"></div>
-                <a class="dropdown-item" href="index-es.html"><span class="item-text">Hiszpański</span></a>
+                <a class="dropdown-item" href="index-es.html"><span class="item-text">Esp&#241;ol</span></a>
                 <div class="dropdown-items-divide-hr"></div>
-                <a class="dropdown-item" href="index-it.html"><span class="item-text">Włoski</span></a>
+                <a class="dropdown-item" href="index-it.html"><span class="item-text">Italiano</span></a>
                 <div class="dropdown-items-divide-hr"></div>
-                <a class="dropdown-item" href="index-fr.html"><span class="item-text">Francuski</span></a>
+                <a class="dropdown-item" href="index-fr.html"><span class="item-text">Fran&#231;ais</span></a>
                 <div class="dropdown-items-divide-hr"></div>
-                <a class="dropdown-item" href="index-pt.html"><span class="item-text">Portugalski</span></a>
+                <a class="dropdown-item" href="index-pt.html"><span class="item-text">Portugu&#234;s</span></a>
                 <div class="dropdown-items-divide-hr"></div>
-                <a class="dropdown-item" href="#index-pl.html"><span class="item-text">Polski</span></a>
+                <a class="dropdown-item" href="index-pl.html"><span class="item-text">Polski</span></a>
                 <div class="dropdown-items-divide-hr"></div>
-                <a class="dropdown-item" href="#index-de.html"><span class="item-text">Niemiecki</span></a>
+                <a class="dropdown-item" href="index-de.html"><span class="item-text">Deutsch</span></a>
             </div>
           </li>
         </ul>
