--- a/index-de.html
+++ b/index-de.html
@@ -166,133 +166,111 @@
           </ul>
           <!-- end of tabs links -->
 
-          <!-- Tabs Content-->
-          <div class="tab-content" id="lenoTabsContent">
+         <!-- Tabs Content-->
+         <div class="tab-content" id="lenoTabsContent">
 
-            <!-- Tab -->
-            <div class="tab-pane fade show active" id="tab-1" role="tabpanel" aria-labelledby="tab-1">
-              <div class="container">
-                <div class="row">
-                  <!-- Icon Cards Pane -->
-                  <div class="col-lg-3">
-                    <div class="card left-pane first">
-                      <div class="card-body">
-                          <div class="text-wrapper">
-                              <h4 class="card-title">Erschaffe deine eigenen Geschichten</h4>
-                              <p>Sei der Spielleiter und verwirkliche deine persönlichen Ideen.</p>
-                          </div>
-                      </div>
-                    </div>
-                    <div class="card left-pane">
-                      <div class="card-body">
-                        <div class="text-wrapper">
-                            <h4 class="card-title">Nutze den Szenario Editor</h4>
-                            <p>Verwende den Editor, um die bekannten Marker und Spielplanteile zu platzieren.</p>
-                        </div>
-                      </div>
-                    </div>
+          <!-- Tab -->
+          <div class="tab-pane fade show active" id="tab-1" role="tabpanel" aria-labelledby="tab-1">
+            <div class="container">
+              <div class="row">
+                <!-- Icon Cards Pane -->
+                <div class="col-lg-3">
+                  <div class="card left-pane first">
                     <div class="card-body">
-                        <div class="text-wrapper">
-                            <h4 class="card-title">Lerne von Tutorials</h4>
-                            <p>In bebilderten Tutorials und ausführlichen Anleitungen werden alle Funktionen einfach erklärt. (Link oben rechts)</p>
-                        </div>
+                      <div class="text-wrapper">
+                        <h4 class="card-title">Erschaffe deine eigenen Geschichten</h4>
+                        <p>Sei der Spielleiter und verwirkliche deine persönlichen Ideen.</p>
                       </div>
                     </div>
                   </div>
-                  <!-- end of icon cards pane -->
-
-                  <!-- Image Pane -->
-                  <div class="col-lg-6">
-                      <img class="img-fluid" src="web/images/editor.png" alt="alternative">
-                      <img class="img-fluid" src="web/images/editor2.png" alt="alternative">
-                  </div>
-                  <!-- end of image pane -->
-
-                  <!-- Icon Cards Pane -->
-                  <div class="col-lg-3">
-                    <div class="card right-pane first">
-                      <div class="card-body">
-                        <div class="text-wrapper">
-                            <h4 class="card-title">Erstelle und verknüpfe Ereignisse</h4>
-                            <p>Kreiere individuelle Ereignisse für Marker, Spielplanteile, Helden und vieles mehr.</p>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="card right-pane">
-                      <div class="card-body">
-                        <div class="text-wrapper">
-                          <h4 class="card-title">Teile Inhalte mit der Community</h4>
-                          <p>Nach der Veröffentlichung können andere Nutzer deine Geschichten erleben.</p>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="card right-pane">
-                      <div class="card-body">
-                        <div class="text-wrapper">
-                          <h4 class="card-title">Stelle anderen Autoren Fragen</h4>
-                          <p>Werde Teil der Valkyrie Discord Gemeinschaft und frage bei Problemen andere Autoren um Rat. (Link oben rechts)</p>
-                        </div>
+                  <div class="card left-pane">
+                    <div class="card-body">
+                      <div class="text-wrapper">
+                        <h4 class="card-title">Nutze den Szenario Editor</h4>
+                        <p>Verwende den Editor, um die aus den offiziellen Apps bekannten Marker und Spielplanteile zu platzieren.</p>
                       </div>
                     </div>
                   </div>
-                  <!-- end of icon cards pane -->
-                </div> <!-- end of row -->
-              </div> <!-- end of container -->
-            </div> <!-- end of tab-pane -->
-            <!-- end of tab -->
+                </div>
+                <!-- end of icon cards pane -->
 
-            <!-- Tab -->
-            <div class="tab-pane fade" id="tab-2" role="tabpanel" aria-labelledby="tab-2">
-              <div class="container">
-                <div class="row">
+                <!-- Image Pane -->
+                <div class="col-lg-6">
+                  <img class="img-fluid" src="web/images/editor.png" alt="alternative">
+                  <img class="img-fluid" src="web/images/editor2.png" alt="alternative">
+                </div>
+                <!-- end of image pane -->
 
-                  <!-- Image Pane -->
-                  <div class="col-md-6">
-                    <img class="img-fluid" src="web/images/select-scenario.png" alt="alternative">
-                    <img class="img-fluid" src="web/images/select-scenario2.png" alt="alternative">
+                <!-- Icon Cards Pane -->
+                <div class="col-lg-3">
+                  <div class="card right-pane first">
+                    <div class="card-body">
+                      <div class="text-wrapper">
+                        <h4 class="card-title">Event gesteuert</h4>
+                        <p>Erstelle Ereignisse für deine Spielmarker, Figuren, Helden und mehr.</p>
+                      </div>
+                    </div>
                   </div>
-                  <!-- end of image pane -->
+                  <div class="card right-pane">
+                    <div class="card-body">
+                      <div class="text-wrapper">
+                        <h4 class="card-title">Teile deine Kreationen mit der Community</h4>
+                        <p>Nach der Veröffentlichung können andere Nutzer weltweit deine Geschichten erleben.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- end of icon cards pane -->
+              </div> <!-- end of row -->
+            </div> <!-- end of container -->
+          </div> <!-- end of tab-pane -->
+          <!-- end of tab -->
 
-                  <!-- Text And Icon Cards Area -->
-                  <div class="col-md-6">
-                    <div class="text-area">
-                      <h3>Genieße dein Werk</h3>
+          <!-- Tab -->
+          <div class="tab-pane fade" id="tab-2" role="tabpanel" aria-labelledby="tab-2">
+            <div class="container">
+              <div class="row">
+
+                <!-- Image Pane -->
+                <div class="col-md-6">
+                  <img class="img-fluid" src="web/images/select-scenario.png" alt="alternative">
+                  <img class="img-fluid" src="web/images/select-scenario2.png" alt="alternative">
+                </div>
+                <!-- end of image pane -->
+
+                <!-- Text And Icon Cards Area -->
+                <div class="col-md-6">
+                  <div class="text-area">
+                    <h3>Teste dein Szenario</h3>
                       <p>Teste deine Inhalte während der Erstellung und spiel sie nach Fertigstellung jederzeit.</p>
-                    </div> <!-- end of text-area -->
+                  </div> <!-- end of text-area -->
 
-
-                    <div class="icon-cards-area">
-                      <div class="card">
-                        <div class="card-body">
-                          <h4 class="card-title">Entdecke zahlreiche weitere Abenteuer</h4>
-                          <p>Erlebe die Geschichten von anderen Autoren. Sortiere sie nach vorhandenen Sprachen und benötigten Erweiterungen. Wähle nach Dauer, Schwierigkeit und Bewertung.</p>
-                        </div>
-                      </div>
-		      <div class="card">
-                        <div class="card-body">
-                          <h4 class="card-title">Übersetze die Geschichten</h4>
+                  <div class="icon-cards-area">
+                    <div class="card">
+                      <div class="card-body">
+                        <h4 class="card-title">Übersetze die Geschichten</h4>
                           <p>Die Community kann Inhalte mit den Autoren gemeinsam lokalisieren. Szenarien und Quests können dann in verschiedenen Sprachen gespielt werden. </p>
-                        </div>
                       </div>
-                      <div class="card">
-                        <div class="card-body">
-                          <h4 class="card-title">Gib Feedback</h4>
+                    </div>
+                    <div class="card">
+                      <div class="card-body">
+                        <h4 class="card-title">Gib Feedback</h4>
                           <p>Spieler sind dazu eingeladen, das Szenario am Ende zu bewerten, um den Autor mit Feedback zu helfen.</p>
-                        </div>
                       </div>
-                    </div> <!-- end of icon cards area -->
-                  </div> <!-- end of col-md-8 -->
-                  <!-- end of text and icon cards area -->
-                </div> <!-- end of row -->
-              </div> <!-- end of container -->
-            </div> <!-- end of tab-pane -->
-            <!-- end of tab -->
-          </div> <!-- end of tab-content -->
-          <!-- end of tabs content -->
-        </div> <!-- end of row -->
-      </div> <!-- end of container -->
-    </div> <!-- end of tabs -->
-    <!-- end of features -->
+                    </div>
+                  </div> <!-- end of icon cards area -->
+                </div> <!-- end of col-md-8 -->
+                <!-- end of text and icon cards area -->
+              </div> <!-- end of row -->
+            </div> <!-- end of container -->
+          </div> <!-- end of tab-pane -->
+          <!-- end of tab -->
+        </div> <!-- end of tab-content -->
+        <!-- end of tabs content -->
+      </div> <!-- end of row -->
+    </div> <!-- end of container -->
+  </div> <!-- end of tabs -->
+  <!-- end of features -->
 
         <!-- Video -->
     <div id="preview" class="basic-1">
