Fixed typo in website language selector

--- a/index-es.html
+++ b/index-es.html
@@ -97,7 +97,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="index.html"><span class="item-text">English</span></a>
                 <div class="dropdown-items-divide-hr"></div>
-                <a class="dropdown-item" href="index-es.html"><span class="item-text">Esp&#241;ol</span></a>
+                <a class="dropdown-item" href="index-es.html"><span class="item-text">Espa&#241;ol</span></a>
                 <div class="dropdown-items-divide-hr"></div>
                 <a class="dropdown-item" href="index-it.html"><span class="item-text">Italiano</span></a>
                 <div class="dropdown-items-divide-hr"></div>
