--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
           <li class="nav-item">
             <a class="nav-link page-scroll" href="https://github.com/NPBruce/valkyrie/wiki/QuestGuide" target="_blank">QUEST CREATION GUIDE</a>
           </li>
+		<li class="nav-item">
+            <a class="nav-link page-scroll" href="https://github.com/NPBruce/valkyrie/issues" target="_blank">Support</a>
+          </li>
 
           <li class="nav-item">
               <a class="nav-link page-scroll" href="https://discord.gg/yrVeSVt" target="_blank">DISCORD</a>
