--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <a class="nav-link page-scroll" href="https://github.com/NPBruce/valkyrie/wiki/QuestGuide" target="_blank">QUEST CREATION GUIDE</a>
           </li>
 		<li class="nav-item">
-            <a class="nav-link page-scroll" href="https://github.com/NPBruce/valkyrie/issues" target="_blank">Support</a>
+            <a class="nav-link page-scroll" href="https://github.com/NPBruce/valkyrie/issues" target="_blank">SUPPORT</a>
           </li>
 
           <li class="nav-item">
