Updated website manual:
- Updated Android installation manual
- Removed FireOS manual
- Updated IOS manual

--- a/index-de.html
+++ b/index-de.html
@@ -83,7 +83,6 @@
             <div class="dropdown-items-divide-hr"></div>
             <a class="dropdown-item" href="#download-linux"><span class="item-text">LINUX</span></a>
             <div class="dropdown-items-divide-hr"></div>
-            <a class="dropdown-item" href="#download-fireos"><span class="item-text">Fire OS</span></a>
             <div class="dropdown-items-divide-hr"></div>
             <a class="dropdown-item" href="#download-ios"><span class="item-text">iOS</span></a>
           </div>
@@ -139,7 +138,6 @@
               <a class="btn-solid-lg page-scroll" href="#download-android"><i class="fab fa-android"></i>ANDROID</a>
               <a class="btn-solid-lg page-scroll" href="#download-macos"><i class="fab fa-apple"></i>MAC OS</a>
               <a class="btn-solid-lg page-scroll" href="#download-linux"><i class="fab fa-linux"></i>LINUX</a>
-              <a class="btn-solid-lg page-scroll" href="#download-fireos">Fire OS</a>
               <a class="btn-solid-lg page-scroll" href="#download-ios"><i class="fab fa-apple"></i>iOS</a>
             </div>
           </div> <!-- end of col -->
@@ -364,7 +362,6 @@
           <div class="col-lg-9">
             <div class="text-container">
               <h3>Android</h3>
-
               <p>Wenn bereits eine andere Version von Valkyrie installiert ist, deinstalliere diese bitte zuerst.</p>
               <p>Installiere die offizielle FFG-App über den Google Play Store:</p>
               <p><b>Warnung: Derzeit wird Valkyrie nur von Android 10 oder niedriger unterstützt. Siehe <a
@@ -463,40 +460,6 @@
     </div> <!-- end of basic-3 -->
     <!-- end of details 2 -->
 
-    <!-- FireOS -->
-    <div id="download-fireos" class="basic-2">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-3">
-            <img class="img-fluid" src="web/images/fire-logo.png" alt="alternative">
-          </div> <!-- end of col -->
-          <div class="col-lg-9">
-            <div class="text-container">
-              <h3>Fire OS</h3>
-              <p>Verwende die Android-Version von Valkyrie. Diese funktioniert ebenfalls auf Fire OS.</p>
-              <p>Die offizielle OBB-Datei muss manuell herunterladen und installiert werden. (Die OBB-Datei ist <a
-                  href="https://apkplz.net" target="_blank">hier</a>) zu finden.</p>
-              <p>Kopiere die Datei nach &lt;storage&gt;/Android/obb/&lt;game&gt; (Wenn der Pfad nicht existiert,
-                erstelle ihn.)</p>
-              <p>1. &lt;storage&gt; sollte der "Interne Speicher" sein. In den meisten Fällen /storage/emulated/0.</p>
-              <p>&lt;game&gt; muss entweder sein:</p>
-              <p><b>"Villen des Wahnsinns":</b> com.fantasyflightgames.mom/ main.906.com.fantasyflightgames.mom.obb</p>
-              <p><b>"Descent: Wege zum Ruhm"</b>: com.fantasyflightgames.rtl/ main.459.com.fantasyflightgames.rtl.obb
-              </p>
-
-              <p>Aktiviere "Unbekannte Quellen" unter Einstellungen → Sicherheit → Unbekannte Quellen. Kopiere die
-                Valkyrie APK-Datei auf das Endgerät. Führe die Valkyrie APK zur Installation aus. Nach der Installation
-                ist "Valkyrie" in der Liste der Anwendungen zu finden. Starte Valkyrie. Bestätige alle Berechtigungen,
-                die die Anwendung erfordert. Klicke auf die Schaltfläche "Importieren" innerhalb der Valkyrie-Anwendung.
-                Der Import kann eine Weile dauern. Nach dem Import kann der gewünschte Spieltyp gestartet werden.</p>
-              <a id="valkyrieAndroid2" class="btn-solid-reg" rel="external nofollow" target="_blank">Neueste Valkyrie
-                Version herunterladen</a>
-            </div> <!-- end of text-container -->
-          </div> <!-- end of col -->
-        </div> <!-- end of row -->
-      </div> <!-- end of container -->
-    </div> <!-- end of basic-2 -->
-
     <!-- iOS -->
     <div id="download-ios" class="basic-3">
       <div class="container">
@@ -504,19 +467,8 @@
           <div class="col-lg-12">
             <div class="text-container">
               <h3>iOS</h3>
-              <p>Aufgrund der von Apple erhobenen App Store Anforderungen kann keine Apple Version angeboten werden.
-                Dennoch kann Valkyrie über KinoConsole von einem Windows-PC aus auf iOS gestreamt werden. <a
-                  href="http://kinoconsole.kinoni.com/" target="_blank">KinoConsole</a>.</p>
-              <p>Installiere Valkyrie und <a href="http://kinoconsole.kinoni.com/#server" target="_blank">KinoConsole
-                  Server</a> auf dem PC (starte den PC bei Bedarf neu). Starte die neu installierte Anwendung "Kinoni
-                Streamer". Gehe auf "Schnellstart", "Durchsuchen..." und füge die Valkyrie.exe hinzu (normalerweise
-                unter C:\Programmdateien (x86)\Valkyrie\Valkyrie.exe zu finden).</p>
-              <p>Installiere die App <a href="https://itunes.apple.com/app/kinoconsole-stream-pc-games/id965075144"
-                  target="_blank"> KinoConsole</a> aus dem App Store. Wenn sich das iOS-Gerät und der PC im selben WLAN
-                befinden, sollte der Server automatisch erkannt werden und "Valkyrie" ist in der Liste der startbaren
-                Apps zu finden. Siehe auch: Offizielle Setup-Anleitung.</p>
-              <p>Ältere iOS-Versionen (< iOS 10) unterstützen KinoKonsole nicht. Splashtop Personal könnte auf diesen
-                  eine Alternative bieten.</p>
+              <p>Während wir aufgrund von Apples erzwungenen App Store-Anforderungen keinen Client ausliefern, kannst du Valkyrie über <a href=„https://help.steampowered.com/en/faqs/view/4C03-C8BA-3EA1-B26A“ target=„_blank“>Steam Link</a> von Ihrem Computer auf iOS streamen.</p>
+              <p>Installieren Sie Valkyrie und Steam auf ihrem PC. Starten Sie die Steam-Anwendung auf Ihrem Computer und die Steam-Link-App auf Ihrem IOS-Gerät. Starten Sie anschließend Valkyrie auf Ihrem Computer, um sie zu streamen.</p>
             </div> <!-- end of text-container -->
           </div> <!-- end of col -->
         </div> <!-- end of row -->
