--- a/index-es.html
+++ b/index-es.html
@@ -81,7 +81,6 @@
             <div class="dropdown-items-divide-hr"></div>
             <a class="dropdown-item" href="#download-linux"><span class="item-text">LINUX</span></a>
             <div class="dropdown-items-divide-hr"></div>
-            <a class="dropdown-item" href="#download-fireos"><span class="item-text">Fire OS</span></a>
             <div class="dropdown-items-divide-hr"></div>
             <a class="dropdown-item" href="#download-ios"><span class="item-text">iOS</span></a>
           </div>
@@ -137,7 +136,6 @@
               <a class="btn-solid-lg page-scroll" href="#download-android"><i class="fab fa-android"></i>ANDROID</a>
               <a class="btn-solid-lg page-scroll" href="#download-macos"><i class="fab fa-apple"></i>MAC OS</a>
               <a class="btn-solid-lg page-scroll" href="#download-linux"><i class="fab fa-linux"></i>LINUX</a>
-              <a class="btn-solid-lg page-scroll" href="#download-fireos">Fire OS</a>
               <a class="btn-solid-lg page-scroll" href="#download-ios"><i class="fab fa-apple"></i>iOS</a>
             </div>
           </div> <!-- end of col -->
@@ -456,39 +454,6 @@
     </div> <!-- end of basic-3 -->
     <!-- end of details 2 -->
 
-    <!-- FireOS -->
-    <div id="download-fireos" class="basic-2">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-3">
-            <img class="img-fluid" src="web/images/fire-logo.png" alt="alternative">
-          </div> <!-- end of col -->
-          <div class="col-lg-9">
-            <div class="text-container">
-              <h3>Fire OS</h3>
-              <p>Use the Android version of Valkyrie, it will also work on Fire OS.</p>
-              <p>You have to download and install the official OBB file manually (You can get it <a
-                  href="https://apkplz.net" target="_blank">here</a>)</p>
-              <p>Copy the file to &lt;storage&gt;/Android/obb/&lt;game&gt; (If the path doesn't exist, create it)</p>
-              <p>1. &lt; storage &gt; should be the &quot;Internal Storage&quot;. /storage/emulated/0 in most of the
-                cases.</p>
-              <p>2. &lt; game &gt; must be either:</p>
-              <p><b>Mansions of Madness:</b> com.fantasyflightgames.mom/ main.906.com.fantasyflightgames.mom.obb</p>
-              <p><b>Road to Legend</b>: com.fantasyflightgames.rtl/ main.459.com.fantasyflightgames.rtl.obb</p>
-
-              <p>Enable "Unknown Sources" under Settings → Security → Unknown Sources. Copy the valkyrie APK file to
-                your device. Run the valkyrie APK to install. After the install, you will find an app named "Valkyrie"
-                in your list of apps. Run it. Allow all permissions the app requests. Press the "Import" button inside
-                the Valkyrie app. The import might take a while. After the import you are able to run the desired game
-                type.</p>
-              <a id="valkyrieAndroid2" class="btn-solid-reg" rel="external nofollow" target="_blank">Download Latest</a>
-
-            </div> <!-- end of text-container -->
-          </div> <!-- end of col -->
-        </div> <!-- end of row -->
-      </div> <!-- end of container -->
-    </div> <!-- end of basic-2 -->
-
     <!-- iOS -->
     <div id="download-ios" class="basic-3">
       <div class="container">
@@ -496,19 +461,8 @@
           <div class="col-lg-12">
             <div class="text-container">
               <h3>iOS</h3>
-              <p>While we don't ship a client due to Apples forced App Store requirements, you can stream Valkyrie to
-                iOS from your Windows PC using <a href="http://kinoconsole.kinoni.com/" target="_blank">KinoConsole</a>.
-              </p>
-              <p>Just install Valkyrie and <a href="http://kinoconsole.kinoni.com/#server" target="_blank">KinoConsole
-                  Server</a> on your PC (restart your PC as required). Start the new, installed "Kinoni Streamer"
-                application. Go to "Quick Launch", "Browse..." and add the Valkyrie.exe (usually found under C:\Program
-                Files (x86)\Valkyrie\Valkyrie.exe).</p>
-              <p>Install the App<a href="https://itunes.apple.com/app/kinoconsole-stream-pc-games/id965075144"
-                  target="_blank"> KinoConsole</a> from the App Store. If your iOS device and the PC are in the same
-                WLAN, it should automatically detect the server and you will find "Valkyrie" in the list of launchable
-                Apps. See also: Official Setup Guide.</p>
-              <p>Older iOS versions (< iOS 10) don't support <a href="http://kinoconsole.kinoni.com/" target="_blank">
-                  KinoKonsole</a>. You can try to use Splashtop Personal on those.</p>
+              <p>Aunque no enviamos un cliente debido a los requisitos forzosos de la App Store de Apple, puedes hacer streaming de Valkyrie a iOS desde tu ordenador usando <a href=«https://help.steampowered.com/en/faqs/view/4C03-C8BA-3EA1-B26A» target=«_blank»>Enlace a Steam</a>.</p> 
+              <p>Sólo tienes que instalar Valkyrie y Steam en tu PC. Inicia la aplicación Steam en tu ordenador y la aplicación steam link en tu dispositivo IOS. Después inicia Valkyrie en tu ordenador para verlo en streaming.</p>
             </div> <!-- end of text-container -->
           </div> <!-- end of col -->
         </div> <!-- end of row -->
