--- a/index-pl.html
+++ b/index-pl.html
@@ -81,7 +81,6 @@
             <div class="dropdown-items-divide-hr"></div>
             <a class="dropdown-item" href="#download-linux"><span class="item-text">LINUX</span></a>
             <div class="dropdown-items-divide-hr"></div>
-            <a class="dropdown-item" href="#download-fireos"><span class="item-text">Fire OS</span></a>
             <div class="dropdown-items-divide-hr"></div>
             <a class="dropdown-item" href="#download-ios"><span class="item-text">iOS</span></a>
           </div>
@@ -137,7 +136,6 @@
               <a class="btn-solid-lg page-scroll" href="#download-android"><i class="fab fa-android"></i>ANDROID</a>
               <a class="btn-solid-lg page-scroll" href="#download-macos"><i class="fab fa-apple"></i>MAC OS</a>
               <a class="btn-solid-lg page-scroll" href="#download-linux"><i class="fab fa-linux"></i>LINUX</a>
-              <a class="btn-solid-lg page-scroll" href="#download-fireos">Fire OS</a>
               <a class="btn-solid-lg page-scroll" href="#download-ios"><i class="fab fa-apple"></i>iOS</a>
             </div>
           </div> <!-- end of col -->
@@ -459,40 +457,6 @@
     </div> <!-- end of basic-3 -->
     <!-- end of details 2 -->
 
-    <!-- FireOS -->
-    <div id="download-fireos" class="basic-2">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-3">
-            <img class="img-fluid" src="web/images/fire-logo.png" alt="alternative">
-          </div> <!-- end of col -->
-          <div class="col-lg-9">
-            <div class="text-container">
-              <h3>Fire OS</h3>
-              <p>Użyj wersji Valkyrie dla systemu Android, będzie działała także na Fire OS.</p>
-              <p>Musisz pobrać i zanstalować oficjalny plik OBB ręcznie(Znajdziesz go <a href="https://apkplz.net"
-                  target="_blank">tutaj</a>).</p>
-              <p>Skopiuj plik do &lt;storage&gt;/Android/obb/&lt;game&gt; (Jeśli lokalizacja nie istnieje, utwórz ją).
-              </p>
-              <p>1. &lt; storage &gt; Powinno być &quot;Internal Storage&quot;. /storage/emulated/0 w większości
-                przypadków.</p>
-              <p>2. &lt; game &gt; musi być jednym z dwóch:</p>
-              <p><b>Posiadłość Szaleństwa:</b> com.fantasyflightgames.mom/ main.906.com.fantasyflightgames.mom.obb</p>
-              <p><b>Droga do Legendy</b>: com.fantasyflightgames.rtl/ main.459.com.fantasyflightgames.rtl.obb</p>
-
-              <p>Włącz "Nieznane Źródła" w Ustawienia → Zabezpieczenia → Nieznane Źródła. Skopiuj plik Valkyrie APK na
-                swoje urządzenie. Uruchom i zainstaluj Valkyrie APK. Po zakończeniu instalacji "Valkyrie" pojawi się na
-                liście aplikacji. Uruchom ją. Udziel aplikacji wymaganych zezwoleń. Wciśnij przycisk "Zaimportuj".
-                Proces może potrwać dłuższą chwilę. Po zakończeniu importu możesz wybrać i rozpocząć grę.</p>
-
-              <a id="valkyrieAndroid2" class="btn-solid-reg" rel="external nofollow" target="_blank">Pobierz</a>
-
-            </div> <!-- end of text-container -->
-          </div> <!-- end of col -->
-        </div> <!-- end of row -->
-      </div> <!-- end of container -->
-    </div> <!-- end of basic-2 -->
-
     <!-- iOS -->
     <div id="download-ios" class="basic-3">
       <div class="container">
@@ -500,19 +464,8 @@
           <div class="col-lg-12">
             <div class="text-container">
               <h3>iOS</h3>
-              <p>Pomimo tego, że ze względu na wymagania App Store, nie udostępniamy Valkyrie na urządzenia z iOS,
-                możesz jednak streamować ją ze swojego PC-ta z Windowsem przy pomocy <a
-                  href="http://kinoconsole.kinoni.com/" target="_blank">KinoConsole</a>.</p>
-              <p>Zainstaluj Valkyrie oraz <a href="http://kinoconsole.kinoni.com/#server" target="_blank">KinoConsole
-                  Server</a> na swoim komputerze (wymagane jest ponowne uruchomienie komputera). Uruchom aplikację
-                "Kinoni Streamer". Wybierz "Quick Launch", "Browse..." i wybierz Valkyrie.exe (domyślnie znajduje się w
-                C:\Program Files (x86)\Valkyrie\Valkyrie.exe).</p>
-              <p>Zainstaluj aplikację<a href="https://itunes.apple.com/app/kinoconsole-stream-pc-games/id965075144"
-                  target="_blank"> KinoConsole</a> z App Store. Jeśli twoje urządzenie z iOS oraz PC są w tej samej
-                sieci, serwer powinien zostać wykryty automatycznie i "Valkyrie" powinno wyświetlić się na liście
-                aplikacji możliwych do włączenia. Sprawdź też: Official Setup Guide.</p>
-              <p>Starsze wersje iOS (< iOS 10) Nie wspierają <a href="http://kinoconsole.kinoni.com/" target="_blank">
-                  KinoKonsole</a>. Możesz spróbować użyć na nich Splashtop Personal.</p>
+              <p>Chociaż nie dostarczamy klienta ze względu na wymuszone przez Apple wymagania App Store, możesz streamować Valkyrie na iOS z komputera za pomocą <a href=„https://help.steampowered.com/en/faqs/view/4C03-C8BA-3EA1-B26A” target=„_blank”>Steam Link</a>.</p>.
+              <p>Po prostu zainstaluj Valkyrie i Steam na swoim komputerze. Uruchom aplikację Steam na komputerze i aplikację steam link na urządzeniu IOS. Następnie uruchom Valkyrie na komputerze, aby ją streamować.</p>
             </div> <!-- end of text-container -->
           </div> <!-- end of col -->
         </div> <!-- end of row -->
