--- a/index-pt.html
+++ b/index-pt.html
@@ -81,7 +81,6 @@
             <div class="dropdown-items-divide-hr"></div>
             <a class="dropdown-item" href="#download-linux"><span class="item-text">LINUX</span></a>
             <div class="dropdown-items-divide-hr"></div>
-            <a class="dropdown-item" href="#download-fireos"><span class="item-text">Fire OS</span></a>
             <div class="dropdown-items-divide-hr"></div>
             <a class="dropdown-item" href="#download-ios"><span class="item-text">iOS</span></a>
           </div>
@@ -137,7 +136,6 @@
               <a class="btn-solid-lg page-scroll" href="#download-android"><i class="fab fa-android"></i>ANDROID</a>
               <a class="btn-solid-lg page-scroll" href="#download-macos"><i class="fab fa-apple"></i>MAC OS</a>
               <a class="btn-solid-lg page-scroll" href="#download-linux"><i class="fab fa-linux"></i>LINUX</a>
-              <a class="btn-solid-lg page-scroll" href="#download-fireos">Fire OS</a>
               <a class="btn-solid-lg page-scroll" href="#download-ios"><i class="fab fa-apple"></i>iOS</a>
             </div>
           </div> <!-- end of col -->
@@ -462,40 +460,6 @@
     </div> <!-- end of basic-3 -->
     <!-- end of details 2 -->
 
-    <!-- FireOS -->
-    <div id="download-fireos" class="basic-2">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-3">
-            <img class="img-fluid" src="web/images/fire-logo.png" alt="alternative">
-          </div> <!-- end of col -->
-          <div class="col-lg-9">
-            <div class="text-container">
-              <h3>Fire OS</h3>
-              <p>Use a versão Android do Valkyrie, também deve funcionar em seu Fire OS.</p>
-              <p>Você deve fazer o download e instalar o arquivo oficial OBB manualmente (Você pode obter <a
-                  href="https://apkplz.net" target="_blank">aqui</a>)</p>
-              <p>Copie o arquivo para &lt;storage&gt;/Android/obb/&lt;game&gt; (Se o caminho não existir, crie)</p>
-              <p>1. &lt;storage&gt; deve ser "Internal Storage". /storage/emulated/0 na maioria dos casos. </p>
-              <p>2. &lt;game&gt; deve ser um dos a seguir</p>
-              <p><b>Mansions of Madness</b>: com.fantasyflightgames.mom/ main.906.com.fantasyflightgames.mom.obb</p>
-              <p><b>Road to Legend</b>: com.fantasyflightgames.rtl/ main.459.com.fantasyflightgames.rtl.obb</p>
-
-              <p>Habilite "Unknown Sources" (Fontes desconhecidas) em Settings → Security → Unknown Sources
-                (Configurações → Segurança → Fontes Desconhecidas). Copie o APK do Valkyrie para seu dispositivo. Rode o
-                APK para instalar. Depois da instalação, você vai enconotrar um App chamado "Valkyrie" em seus
-                aplicativos. Rode. Permita todas as permissões que o App peça. Aperte o botão "Import" dentro do App do
-                Valkyrie. A importação pode levar um tempo. Depois da importação ser concluída você pode selecionar qual
-                jogo quer usar.</p>
-
-              <a id="valkyrieAndroid2" class="btn-solid-reg" rel="external nofollow" target="_blank">Download Último</a>
-
-            </div> <!-- end of text-container -->
-          </div> <!-- end of col -->
-        </div> <!-- end of row -->
-      </div> <!-- end of container -->
-    </div> <!-- end of basic-2 -->
-
     <!-- iOS -->
     <div id="download-ios" class="basic-3">
       <div class="container">
@@ -503,21 +467,8 @@
           <div class="col-lg-12">
             <div class="text-container">
               <h3>iOS</h3>
-              <p>Por enquanto nós não temos uma versão para iOS devido a algumas políticas da App Store, mas você pode
-                fazer um stream do Valkyrie para o iOS a partir do seu PC Windows usando <a
-                  href="http://kinoconsole.kinoni.com/" target="_blank">KinoConsole</a>.</p>
-              <p>Instale o Valkyrie e oo <a href="http://kinoconsole.kinoni.com/#server" target="_blank">KinoConsole
-                  Server</a> no seu PC (reinicie conforme pedido). Inicie o recém instalado "Kinoni Streamer". Vá até
-                "Quick Launch", "Browse..." e adicione o Valkyrie.exe (geralmente encontrado em C:\Program Files
-                (x86)\Valkyrie\Valkyrie.exe).</p>
-              <p>Instale o App<a href="https://itunes.apple.com/app/kinoconsole-stream-pc-games/id965075144"
-                  target="_blank"> KinoConsole</a> na App Store. Se o seu dispostivo iOS device e PC estiverem na mesma
-                WLAN, ele deve automaticamente identificar o servidor e você encontrará "Valkyrie" na lista de App. Veja
-                também: <a href="http://kinoconsole.kinoni.com/iossetup.html" target="_blank">Official Setup Guide.</a>
-              </p>
-              <p>Versões mais antigas de iOS (< iOS 10) não tem suporte ao <a href="http://kinoconsole.kinoni.com/"
-                  target="_blank">KinoKonsole</a>. Você pode tentar usar o <a href="https://www.splashtop.com/personal"
-                    target="_blank">Splashtop Personal</a>.</p>
+              <p>Embora não enviemos um cliente devido aos requisitos forçados da App Store da Apple, podes transmitir o Valkyrie para iOS a partir do teu computador usando <a href=“https://help.steampowered.com/en/faqs/view/4C03-C8BA-3EA1-B26A” target=“_blank”>Steam Link</a>.</p>
+              <p>Basta instalar o Valkyrie e o Steam no seu PC. Inicie o aplicativo Steam no seu computador e o aplicativo de link de vapor no seu dispositivo IOS. Depois disso, inicie o Valkyrie no seu computador para transmiti-lo.</p>
             </div> <!-- end of text-container -->
           </div> <!-- end of col -->
         </div> <!-- end of row -->
