Website: Fixed wording on german website.

--- a/index-de.html
+++ b/index-de.html
@@ -337,8 +337,8 @@
                 abgeschlossen wird oder nicht funktioniert, lies den Abschnitt <a
                   href="https://github.com/NPBruce/valkyrie/wiki/Troubleshooting" target="_blank">Troubleshooting</a>.
               </p>
-              <p>Zur Benutzung von Valkyrie wird die Installation der entsprechenden FGG-Anwendung, die du spielen
-                möchtest, benötigt:</p>
+              <p>Zur Benutzung von Valkyrie wird die Installation der entsprechenden FGG-Anwendung, die Sie spielen
+                möchten, benötigt:</p>
               <ul>
                 <li>"Mansions of Madness: Zweite Edition" erfordert die <a
                     href="http://store.steampowered.com/app/478980/" target="_blank">Villen des Wahnsinns</a> App.</li>
@@ -384,7 +384,7 @@
                 zu finden. </p>
               <p>4. Starte Valkyrie. Lasse alle Berechtigungen zu, die die App erfordert. Klicke in der Valkyrie-App auf
                 die Schaltfläche "Importieren". Der Import kann etwas länger dauern, bitte sei geduldig. Nach dem Import
-                kannst du den gewünschten Spieltyp ausführen.</p>
+                können Sie den gewünschten Spieltyp ausführen.</p>
 
               <p>Wenn ein schwarzer Bildschirm erscheint, gehe bitte zu den App-Einstellungen und überprüfe, ob der
                 Zugriff auf den Systemspeicher eingeschaltet ist.</p>
@@ -467,7 +467,7 @@
           <div class="col-lg-12">
             <div class="text-container">
               <h3>iOS</h3>
-              <p>Während wir aufgrund von Apples erzwungenen App Store-Anforderungen keinen Client ausliefern, kannst du Valkyrie über <a href=„https://help.steampowered.com/en/faqs/view/4C03-C8BA-3EA1-B26A“ target=„_blank“>Steam Link</a> von Ihrem Computer auf iOS streamen.</p>
+              <p>Während wir aufgrund von Apples erzwungenen App Store-Anforderungen keinen Client ausliefern, können Sie Valkyrie über <a href=„https://help.steampowered.com/en/faqs/view/4C03-C8BA-3EA1-B26A“ target=„_blank“>Steam Link</a> von Ihrem Computer auf iOS streamen.</p>
               <p>Installieren Sie Valkyrie und Steam auf ihrem PC. Starten Sie die Steam-Anwendung auf Ihrem Computer und die Steam-Link-App auf Ihrem IOS-Gerät. Starten Sie anschließend Valkyrie auf Ihrem Computer, um sie zu streamen.</p>
             </div> <!-- end of text-container -->
           </div> <!-- end of col -->
