Website: Fixed android installation manual link

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
               <p>3. Run the valkyrie .apk file to install Valkyrie. After the installation finished, you will find an app named "Valkyrie" in your list of apps. </p>
               <p>4. Run the app.
               <p>5. Allow all permissions the app requests.</p>
-              <p>6. For all further steps including data import from the official apps please see <a href="Android-installation-manual">Android installation manual.</a></p>
+              <p>6. For all further steps including data import from the official apps please see <a href="https://github.com/NPBruce/valkyrie/wiki/Android-installation-manual">Android installation manual.</a></p>
               <a id="valkyrieAndroid" class="btn-solid-reg" rel="external nofollow" target="_blank">Download Latest</a>
             </div> <!-- end of text-container -->
           </div> <!-- end of col -->
